# wasm-wallet

./: .gitignore  Cargo.toml  README.md  index.html  stylez.css
blockchain/: Cargo.toml  ierc20.abi
blockchain/src/: account.rs  chain.rs  chain_metadata.rs  chain_old.rs  layer1.rs  lib.rs  mnemonic.rs  shared.rs  token.rs
src/: lib.rs  session.rs  storage.rs  utils.rs  wallet.rs
