[package]
name = "wasm-wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.61", features = ["console", "Storage", "Window"] }
wasm-bindgen-futures = "0.4.34"
reqwest = { version = "0.11", features = ["json"] }
eyre = "0.6.8"
magic-crypt = "3.1.12"
futures = "0.3.28"
serde_json = "1.0.94"
serde = "1.0.160"

# Local libraries:
blockchain = { path = "./blockchain" }

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"

