[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
ethers = { version = "2.0.0", default-features = false, features = ["legacy"] }
coins-bip39 = "0.8.3"
serde_json = "1.0.94"
rand = "0.8.5"
#bip39 = "2.0.0"